@@ -330,7 +330,7 @@ struct _DMUS_SYNTHSTATS {
 	DWORD dwCPUPerVoice;
 	DWORD dwLostNotes;
 	DWORD dwFreeMemory;
-	long  lPeakVolume;
+	LONG  lPeakVolume;
 };
 
 struct _DMUS_SYNTHSTATS8 {
@@ -341,7 +341,7 @@ struct _DMUS_SYNTHSTATS8 {
 	DWORD dwCPUPerVoice;
 	DWORD dwLostNotes;
 	DWORD dwFreeMemory;
-	long  lPeakVolume;
+	LONG  lPeakVolume;
 	DWORD dwSynthMemUse;
 };
 
