@@ -15,6 +15,8 @@
 	* dls1.h, dls2.h, dmdls.h, dmerror.h, dmplugin.h, dmusbuff.h: Fix license
 	  headers that mistakenly use GPL instead of LGPL.
 	* dmusicc.h, dmusicf.h, dmusici.h, dmusics.h: Likewise.
+	* dmdls.h, dmerror.h, dmplugin.h, dmusicc.h, dmusicf.h, dmusici.h, dmusics.h:
+	  more long to LONG changes from wine git repository.
 
 2009-04-04  Ozkan Sezer <sezeroz@gmail.com>
 
